<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".PrincipalActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="409dp"
        android:layout_height="266dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gvdatos"
                android:layout_width="800dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:numColumns="7"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="false" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tex1p1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="391dp"
        android:layout_height="317dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/spk"
        app:layout_constraintBottom_toTopOf="@+id/btn2p1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_matricula"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt1p1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_matricula"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColor="#000000"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv2p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt2p1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv3p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_edad"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt3p1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_edad"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColor="#000000"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv4p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_semestre"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt4p1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_semestre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv5p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_promedio"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt5p1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_promedio"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="#000000"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv6p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_estado"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt6p1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_estado"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn1p1"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="14dp"
        android:onClick="btn_agregar"
        android:text="@string/btn_agregar"
        android:textColor="#00E5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2p1"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn2p1"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:onClick="btn_modificar"
        android:text="@string/btn_modificar"
        android:textColor="#00E5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn3p1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn3p1"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:onClick="btn_eliminar"
        android:text="@string/btn_eliminar"
        android:textColor="#00E5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>







